# rustFrida-patch

./: .gitignore  README.md
quickjs-hook/: Cargo.toml  build.rs
quickjs-hook/src/: context.rs  fast_hook.rs  hook_engine.c  hook_engine.h  hook_engine_art.c  hook_engine_inline.c  hook_engine_internal.h  hook_engine_mem.c  hook_engine_redir.c  lib.rs  raw_thread.rs  runtime.rs
quickjs-hook/src/jsapi/: callback_util.rs  mod.rs  ptr.rs  util.rs
quickjs-hook/src/jsapi/hook_api/: callback.rs  cmodule.rs  functions.rs  mod.rs  registry.rs
quickjs-hook/src/jsapi/java/: art_class.rs  art_controller.rs  heap_scan.rs  java_array_api.rs  java_boot.js  java_choose_api.rs  java_fast_api.rs  java_field_api.rs  java_hook_api.rs  java_inspect_api.rs  java_method_list_api.rs  jni_core.rs  jvmti.rs  mod.rs  reflect.rs
quickjs-hook/src/jsapi/java/art_method/: bridge.rs  dex_resolver.rs  fields.rs  mod.rs  runtime.rs
quickjs-hook/src/jsapi/java/callback/: executor.rs  hook.rs  invoke.rs  marshal.rs  mod.rs
quickjs-hook/src/jsapi/java/java_hook_api/: install.rs  install_support.rs  managed_dex_builder.rs  (+1 more)
quickjs-hook/src/jsapi/jni/: api.rs  jni_boot.js  mod.rs
quickjs-hook/src/jsapi/memory/: helpers.rs  mod.rs  write.rs  writest.rs
quickjs-hook/src/jsapi/module/: api.rs  linker.rs  resolve.rs
quickjs-hook/src/recomp/: mod.rs  recomp_page.c
rust_frida/: Cargo.toml  build.rs
rust_frida/src/: args.rs  communication.rs  http_rpc.rs  identity.rs  injection.rs  main.rs  process.rs  props.rs  remote_agent.rs  repl.rs  selinux.rs  server.rs  session.rs  spawn.rs  types.rs
(+72 files in other folders)
